♻️ refactored #bookmarks-bar; fixed spacing

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -172,29 +172,32 @@ sub {
   position: relative;
   top: 9px;
   left: 8px;
-  /*min-width: 64px;*/
-  height: 24px;
-  margin: 0 9px 0 0;
-  padding: 0 0.6em;
+  height: 1rem;
+  /*margin: 0 9px 0 0;*/
+  padding: 0 1em;
 
   background-color: #fff;
-  border-radius: 24px;
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
+  /*box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);*/
   float: left;
   font-size: 11.5px;
-  line-height: 24px;
+  line-height: 1rem;
   transition: all 200ms ease-in-out;
   -webkit-transition: all 200ms ease-in-out;
 }
 .bookmarks-bar .button,
 .bookmarks-bar .button path {
-  color: rgba(0, 0, 0, 0.65);
-  fill: rgba(0, 0, 0, 0.65);
+  color: #9e9e9e;
+  fill: #9e9e9e;
 }
 .bookmarks-bar .button:hover {
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-
+  /*box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);*/
 }
+.bookmarks-bar .button:hover,
+.bookmarks-bar .button:hover path {
+  color: #000;
+  fill: #000;
+}
+
 .bookmarks-bar #app-return *,
 .bookmarks-bar #preferences-return * {
   cursor: pointer;
@@ -217,7 +220,8 @@ sub {
   padding: 0;
   margin-right: 9px;
   display: inline-block;
-  font-family: sans-serif;
+  /*font-family: sans-serif;*/
+  font-family: 'Roboto Mono', monospace;
   font-size: 11.5px;
   font-weight: bold;
   line-height: 24px;
@@ -226,12 +230,14 @@ sub {
 }
 .bookmarks-bar .icon {
   position: relative;
-  top: 2px;
+  top: 50%;
   left: 0;
   width: 20px;
   height: 20px;
-  /*padding: 0 0 0 5px;*/
+
+  display: flex;
   float: left;
+  transform: translateY(-50%);
 }
 
 .noselect {
